Revert "fix(Tabbar): badge number vertical align center (#3493)"
This reverts commit f5b00be97687d21153496ab067e4117050f0b925.

--- a/packages/common/style/var.less
+++ b/packages/common/style/var.less
@@ -279,6 +279,7 @@
 @info-background-color: @red;
 @info-dot-color: @red;
 @info-dot-size: 8px;
+@info-font-family: @price-integer-font-family;
 
 // Loading
 @loading-text-color: @gray-6;
